# TCM

./: .gitignore
hw3tpm-tcm-modify/: .gitignore  BUILD.gn  Makefile  Makefile.am  Makefile.in  README.md  bundle.json  config.status  configure  configure.ac  liteos_compat.h  src.mk
hw3tpm-tcm-modify/Platform/include/: Platform.h  PlatformACT.h  PlatformClock.h  PlatformData.h
hw3tpm-tcm-modify/Platform/include/prototypes/: platform_public_interface.h
hw3tpm-tcm-modify/Platform/src/: Cancel.c  Clock.c  DebugHelpers.c  Entropy.c  ExtraData.c  LocalityPlat.c  NVMem.c  PPPlat.c  PlatformACT.c  PlatformData.c  PlatformPcr.c  PowerPlat.c  RunCommand.c  Unique.c  VendorInfo.c
hw3tpm-tcm-modify/Platform/src/.deps/: libplatform_a-Cancel.Po  libplatform_a-Clock.Po  libplatform_a-DebugHelpers.Po  libplatform_a-Entropy.Po  libplatform_a-ExtraData.Po  libplatform_a-LocalityPlat.Po  libplatform_a-NVMem.Po  libplatform_a-PPPlat.Po  libplatform_a-PlatformACT.Po  libplatform_a-PlatformData.Po  libplatform_a-PlatformPcr.Po  libplatform_a-PowerPlat.Po  libplatform_a-RunCommand.Po  libplatform_a-Unique.Po  libplatform_a-VendorInfo.Po
hw3tpm-tcm-modify/Simulator/include/: TpmTcpProtocol.h
hw3tpm-tcm-modify/Simulator/include/prototypes/: Simulator_fp.h
hw3tpm-tcm-modify/Simulator/src/: TPMCmdp.c  TPMCmds.c  TcpServer.c  simulatorPrivate.h  simulator_sysheaders.h
hw3tpm-tcm-modify/Simulator/src/.deps/: tpm2_simulator-TPMCmdp.Po  tpm2_simulator-TPMCmds.Po  tpm2_simulator-TcpServer.Po
hw3tpm-tcm-modify/TpmConfiguration/TpmConfiguration/: TpmBuildSwitches.h  TpmProfile.h  TpmProfile_CommandList.h  TpmProfile_Common.h  TpmProfile_ErrorCodes.h  TpmProfile_Misc.h  VendorInfo.h
hw3tpm-tcm-modify/tpm/cryptolibs/Ohitls/: CMakeLists.txt  TpmToOhitlsMath.c  TpmToOhitlsSupport.c  TpmToOhitlsSym.c
hw3tpm-tcm-modify/tpm/cryptolibs/Ohitls/.deps/: src_libtpm_a-TpmToOhitlsMath.Po  src_libtpm_a-TpmToOhitlsSupport.Po  src_libtpm_a-TpmToOhitlsSym.Po
hw3tpm-tcm-modify/tpm/cryptolibs/Ohitls/include/: BnOhitls.h
hw3tpm-tcm-modify/tpm/cryptolibs/Ossl/: BnToOsslMath.c  TpmToOsslSupport.c
hw3tpm-tcm-modify/tpm/cryptolibs/Ossl/.deps/: src_libtpm_a-BnToOsslMath.Po  src_libtpm_a-TpmToOsslSupport.Po
hw3tpm-tcm-modify/tpm/cryptolibs/Ossl/include/: BnOssl.h
hw3tpm-tcm-modify/tpm/cryptolibs/TpmBigNum/: BnConvert.c  BnEccConstants.c  BnMath.c  BnMemory.c  BnUtil.c  TpmBigNum.h  TpmBigNumThunks.c
hw3tpm-tcm-modify/tpm/cryptolibs/TpmBigNum/.deps/: src_libtpm_a-BnConvert.Po  src_libtpm_a-BnEccConstants.Po  src_libtpm_a-BnMath.Po  src_libtpm_a-BnMemory.Po  src_libtpm_a-BnUtil.Po  src_libtpm_a-TpmBigNumThunks.Po
hw3tpm-tcm-modify/tpm/cryptolibs/TpmBigNum/include/: BnConvert_fp.h  BnMath_fp.h  BnMemory_fp.h  BnSupport_Interface.h  BnUtil_fp.h  BnValues.h
hw3tpm-tcm-modify/tpm/cryptolibs/common/include/: CryptoInterface.h  EccConstantData.inl  MathLibraryInterface.h  MathLibraryInterfaceTypes.h
hw3tpm-tcm-modify/tpm/include/platform_interface/: pcrstruct.h  platform_to_tpm_interface.h  tpm_to_platform_interface.h
hw3tpm-tcm-modify/tpm/include/platform_interface/prototypes/: ExecCommand_fp.h  Manufacture_fp.h  _TPM_Hash_Data_fp.h  _TPM_Hash_End_fp.h  _TPM_Hash_Start_fp.h  _TPM_Init_fp.h  platform_pcr_fp.h
hw3tpm-tcm-modify/tpm/include/private/: CommandAttributeData.h  CommandAttributes.h  CommandDispatchData.h  CommandDispatcher.h  Commands.h  CryptEcc.h  CryptHash.h  CryptRand.h  CryptRsa.h  CryptSym.h  CryptTest.h  EccTestData.h  Global.h  HandleProcess.h  HashTestData.h  InternalRoutines.h  KdfTestData.h  LibSupport.h  Marshal.h  NV.h  OIDs.h  PRNG_TestVectors.h  RsaTestData.h  SelfTest.h  SymmetricTest.h  SymmetricTestData.h  TableMarshal.h  TableMarshalDefines.h  TableMarshalTypes.h  Tpm.h  TpmASN1.h  X509.h
hw3tpm-tcm-modify/tpm/include/private/prototypes/: ACT_SetTimeout_fp.h  ACT_spt_fp.h  AC_GetCapability_fp.h  AC_Send_fp.h  AC_spt_fp.h  ActivateCredential_fp.h  AlgorithmCap_fp.h  AlgorithmTests_fp.h  Attest_spt_fp.h  Bits_fp.h  CertifyCreation_fp.h  CertifyX509_fp.h  Certify_fp.h  ChangeEPS_fp.h  ChangePPS_fp.h  ClearControl_fp.h  Clear_fp.h  ClockRateAdjust_fp.h  ClockSet_fp.h  CommandAudit_fp.h  CommandCodeAttributes_fp.h  CommandDispatcher_fp.h  Commit_fp.h  ContextLoad_fp.h  ContextSave_fp.h  Context_spt_fp.h  CreateLoaded_fp.h  CreatePrimary_fp.h  Create_fp.h  CryptCmac_fp.h  CryptEccCrypt_fp.h  CryptEccKeyExchange_fp.h  CryptEccMain_fp.h  CryptEccSignature_fp.h  CryptHash_fp.h  CryptPrimeSieve_fp.h  CryptPrime_fp.h  CryptRand_fp.h  CryptRsa_fp.h  CryptSelfTest_fp.h  (+152 more)
hw3tpm-tcm-modify/tpm/include/public/: ACT.h  BaseTypes.h  Capabilities.h  CompilerDependencies.h  CompilerDependencies_gcc.h  CompilerDependencies_msvc.h  GpMacros.h  MinMax.h  TPMB.h  TpmAlgorithmDefines.h  TpmCalculatedAttributes.h  TpmTypes.h  VerifyConfiguration.h  endian_swap.h  tpm_public.h  tpm_radix.h
hw3tpm-tcm-modify/tpm/include/public/prototypes/: TpmFail_fp.h
hw3tpm-tcm-modify/tpm/src/X509/: TpmASN1.c  X509_ECC.c  X509_RSA.c  X509_spt.c
hw3tpm-tcm-modify/tpm/src/X509/.deps/: libtpm_a-TpmASN1.Po  libtpm_a-X509_ECC.Po  libtpm_a-X509_RSA.Po  (+1 more)
hw3tpm-tcm-modify/tpm/src/crypt/: AlgorithmTests.c  CryptCmac.c  CryptEccCrypt.c  CryptEccData.c  CryptEccKeyExchange.c  CryptEccMain.c  CryptEccSignature.c  CryptHash.c  CryptPrime.c  CryptPrimeSieve.c  CryptRand.c  CryptRsa.c  CryptSelfTest.c  CryptSmac.c  CryptSym.c  CryptUtil.c  PrimeData.c  RsaKeyCache.c  Ticket.c
hw3tpm-tcm-modify/tpm/src/events/: _TPM_Hash_Data.c  _TPM_Hash_End.c  _TPM_Hash_Start.c  _TPM_Init.c
hw3tpm-tcm-modify/tpm/src/main/: CommandDispatcher.c  ExecCommand.c  SessionProcess.c
hw3tpm-tcm-modify/tpm/src/subsystem/: CommandAudit.c  DA.c  Hierarchy.c  NvDynamic.c  NvReserved.c  Object.c  PCR.c  PP.c  Session.c  Time.c
hw3tpm-tcm-modify/tpm/src/support/: AlgorithmCap.c  Bits.c  CommandCodeAttributes.c  Entity.c  Global.c  Handle.c  IoBuffers.c  Locality.c  Manufacture.c  Marshal.c  MathOnByteBuffers.c  Memory.c  Power.c  PropertyCap.c  Response.c  ResponseCodeProcessing.c  TableDrivenMarshal.c  TableMarshalData.c  TpmFail.c  TpmSizeChecks.c
(+352 files in other folders)
