# ========== tpm2-simulator 可执行文件（RISC-V 32） ==========

# BUILD.gn for ms-tpm-20-ref on OpenHarmony 5.1.0 RISC-V 32 QEMU

import("//build/ohos.gni")

# ========== RISC-V 32 交叉编译配置 ==========
config("tpm_riscv32_config") {
  include_dirs = [
  "//third_party/openhitls",
  "//third_party/openhitls/include/crypto",
  "//third_party/openhitls/crypto/include",
  "//third_party/openhitls/crypto/ecc/include",
  "//third_party/openhitls/crypto/ecc/src",
  "//third_party/openhitls/crypto/bn/include",
  "//third_party/openhitls/include/bsl",
  "//third_party/openhitls/config/macro_config",
    "Platform/include",
    "Platform/include/prototypes",
    "Simulator/include",
    "Simulator/include/prototypes",
    "tpm/include",
    "tpm/include/platform_interface",
    "tpm/include/platform_interface/prototypes",
    "tpm/include/private",
    "tpm/include/private/prototypes",
    "tpm/include/public",
    "tpm/cryptolibs",
    "tpm/cryptolibs/common/include",
    "tpm/cryptolibs/Ohitls/include",
    "tpm/cryptolibs/TpmBigNum/include",
    "TpmConfiguration",
    "TpmConfiguration/TpmConfiguration",
  ]

  cflags = [
    "-std=gnu11",
    "-Wall",
    "-Wformat-security",
    "-fPIC",
    "-Wno-error=deprecated-declarations",
    "-DHASH_LIB=Ohitls",
    "-DSYM_LIB=Ohitls",
    "-DMATH_LIB=TpmBigNum",
    "-DBN_MATH_LIB=Ohitls",
    "-DHAVE_PTHREAD=1",
    "-DHAVE_PTHREAD_PRIO_INHERIT=1",
    "-DHITLS_CRYPTO",
    "-DHITLS_CRYPTO_BN",
    "-DHITLS_CRYPTO_ECC",
    "-DHITLS_CRYPTO_PKEY",
    "-DHITLS_CRYPTO_CIPHER",
    "-DHITLS_CRYPTO_MAC",
    "-DHITLS_CRYPTO_MD",
    "-DHITLS_CRYPTO_AES",
    "-DHITLS_CRYPTO_CMAC",
    "-DHITLS_CRYPTO_CMAC_AES",
    "-DHITLS_CRYPTO_HMAC",
    "-DHITLS_CRYPTO_SHA1",
    "-DHITLS_CRYPTO_SHA256",
    "-DHITLS_CRYPTO_SHA384",
    "-DHITLS_CRYPTO_SHA512",
    "-DHITLS_CRYPTO_SM3",
    "-DHITLS_CRYPTO_ENTROPY",
    "-DHITLS_CRYPTO_DRBG",
    "-DHITLS_CRYPTO_DRBG_HASH",
    # Rename TPM DRBG entry points to avoid clashing with OpenHiTLS symbols.
    "-DDRBG_GetEntropy=TpmDrbg_GetEntropy",
    "-DDRBG_Reseed=TpmDrbg_Reseed",
    "-DDRBG_Instantiate=TpmDrbg_Instantiate",
    "-DDRBG_Uninstantiate=TpmDrbg_Uninstantiate",
    "-DDRBG_Generate=TpmDrbg_Generate",
    "-DDRBG_SelfTest=TpmDrbg_SelfTest",
    "-DDRBG_InstantiateSeeded=TpmDrbg_InstantiateSeeded",
    "-DDRBG_InstantiateSeededKdf=TpmDrbg_InstantiateSeededKdf",
    "-DDRBG_AdditionalData=TpmDrbg_AdditionalData",
    # Big number support hook also needs a unique export name.
    "-DBnSupportLibInit=TpmBnSupportLibInit",
    "-DHITLS_THIRTY_TWO_BITS",
    # RISC-V 32 专用
    "-march=rv32imac",
    "-mabi=ilp32",
    "-static",  # QEMU 用户态模拟推荐静态链接
    "-DSIMULATION=YES"
  ]

  ldflags = [
    "-static",
    "-Wl,--no-undefined",
    "-lc",
    "-lm",
  ]

  #libs = [ "crypto", "pthread" ]
}


# ========== libplatform 静态库 ==========
ohos_static_library("libplatform") {
  sources = [
    "Platform/src/Cancel.c",
    "Platform/src/Clock.c",
    "Platform/src/DebugHelpers.c",
    "Platform/src/Entropy.c",
    "Platform/src/ExtraData.c",
    "Platform/src/LocalityPlat.c",
    "Platform/src/NVMem.c",
    "Platform/src/PPPlat.c",
    "Platform/src/PlatformACT.c",
    "Platform/src/PlatformData.c",
    "Platform/src/PlatformPcr.c",
    "Platform/src/PowerPlat.c",
    "Platform/src/RunCommand.c",
    "Platform/src/Unique.c",
    "Platform/src/VendorInfo.c",
  ]

  public_configs = [ ":tpm_riscv32_config" ]
  part_name = "tpm"
}

# ========== libtpm 静态库 ==========
ohos_static_library("libtpm") {
  sources = [
    "tpm/cryptolibs/Ohitls/TpmToOhitlsMath.c",
    "tpm/cryptolibs/Ohitls/TpmToOhitlsSupport.c",
    "tpm/cryptolibs/Ohitls/TpmToOhitlsSym.c",
    "tpm/cryptolibs/TpmBigNum/BnConvert.c",
    "tpm/cryptolibs/TpmBigNum/BnEccConstants.c",
    "tpm/cryptolibs/TpmBigNum/BnMath.c",
    "tpm/cryptolibs/TpmBigNum/BnMemory.c",
    "tpm/cryptolibs/TpmBigNum/BnUtil.c",
    "tpm/cryptolibs/TpmBigNum/TpmBigNumThunks.c",
    "tpm/src/X509/TpmASN1.c",
    "tpm/src/X509/X509_ECC.c",
    "tpm/src/X509/X509_RSA.c",
    "tpm/src/X509/X509_spt.c",
    "tpm/src/command/Asymmetric/ECC_Decrypt.c",
    "tpm/src/command/Asymmetric/ECC_Encrypt.c",
    "tpm/src/command/Asymmetric/ECC_Parameters.c",
    "tpm/src/command/Asymmetric/ECDH_KeyGen.c",
    "tpm/src/command/Asymmetric/ECDH_ZGen.c",
    "tpm/src/command/Asymmetric/EC_Ephemeral.c",
    "tpm/src/command/Asymmetric/RSA_Decrypt.c",
    "tpm/src/command/Asymmetric/RSA_Encrypt.c",
    "tpm/src/command/Asymmetric/ZGen_2Phase.c",
    "tpm/src/command/AttachedComponent/AC_GetCapability.c",
    "tpm/src/command/AttachedComponent/AC_Send.c",
    "tpm/src/command/AttachedComponent/AC_spt.c",
    "tpm/src/command/AttachedComponent/Policy_AC_SendSelect.c",
    "tpm/src/command/Attestation/Attest_spt.c",
    "tpm/src/command/Attestation/Certify.c",
    "tpm/src/command/Attestation/CertifyCreation.c",
    "tpm/src/command/Attestation/CertifyX509.c",
    "tpm/src/command/Attestation/GetCommandAuditDigest.c",
    "tpm/src/command/Attestation/GetSessionAuditDigest.c",
    "tpm/src/command/Attestation/GetTime.c",
    "tpm/src/command/Attestation/Quote.c",
    "tpm/src/command/Capability/GetCapability.c",
    "tpm/src/command/Capability/SetCapability.c",
    "tpm/src/command/Capability/TestParms.c",
    "tpm/src/command/ClockTimer/ACT_SetTimeout.c",
    "tpm/src/command/ClockTimer/ACT_spt.c",
    "tpm/src/command/ClockTimer/ClockRateAdjust.c",
    "tpm/src/command/ClockTimer/ClockSet.c",
    "tpm/src/command/ClockTimer/ReadClock.c",
    "tpm/src/command/CommandAudit/SetCommandCodeAuditStatus.c",
    "tpm/src/command/Context/ContextLoad.c",
    "tpm/src/command/Context/ContextSave.c",
    "tpm/src/command/Context/Context_spt.c",
    "tpm/src/command/Context/EvictControl.c",
    "tpm/src/command/Context/FlushContext.c",
    "tpm/src/command/DA/DictionaryAttackLockReset.c",
    "tpm/src/command/DA/DictionaryAttackParameters.c",
    "tpm/src/command/Duplication/Duplicate.c",
    "tpm/src/command/Duplication/Import.c",
    "tpm/src/command/Duplication/Rewrap.c",
    "tpm/src/command/EA/PolicyAuthValue.c",
    "tpm/src/command/EA/PolicyAuthorize.c",
    "tpm/src/command/EA/PolicyAuthorizeNV.c",
    "tpm/src/command/EA/PolicyCapability.c",
    "tpm/src/command/EA/PolicyCommandCode.c",
    "tpm/src/command/EA/PolicyCounterTimer.c",
    "tpm/src/command/EA/PolicyCpHash.c",
    "tpm/src/command/EA/PolicyDuplicationSelect.c",
    "tpm/src/command/EA/PolicyGetDigest.c",
    "tpm/src/command/EA/PolicyLocality.c",
    "tpm/src/command/EA/PolicyNV.c",
    "tpm/src/command/EA/PolicyNameHash.c",
    "tpm/src/command/EA/PolicyNvWritten.c",
    "tpm/src/command/EA/PolicyOR.c",
    "tpm/src/command/EA/PolicyPCR.c",
    "tpm/src/command/EA/PolicyParameters.c",
    "tpm/src/command/EA/PolicyPassword.c",
    "tpm/src/command/EA/PolicyPhysicalPresence.c",
    "tpm/src/command/EA/PolicySecret.c",
    "tpm/src/command/EA/PolicySigned.c",
    "tpm/src/command/EA/PolicyTemplate.c",
    "tpm/src/command/EA/PolicyTicket.c",
    "tpm/src/command/EA/Policy_spt.c",
    "tpm/src/command/Ecdaa/Commit.c",
    "tpm/src/command/FieldUpgrade/FieldUpgradeData.c",
    "tpm/src/command/FieldUpgrade/FieldUpgradeStart.c",
    "tpm/src/command/FieldUpgrade/FirmwareRead.c",
    "tpm/src/command/HashHMAC/EventSequenceComplete.c",
    "tpm/src/command/HashHMAC/HMAC_Start.c",
    "tpm/src/command/HashHMAC/HashSequenceStart.c",
    "tpm/src/command/HashHMAC/MAC_Start.c",
    "tpm/src/command/HashHMAC/SequenceComplete.c",
    "tpm/src/command/HashHMAC/SequenceUpdate.c",
    "tpm/src/command/Hierarchy/ChangeEPS.c",
    "tpm/src/command/Hierarchy/ChangePPS.c",
    "tpm/src/command/Hierarchy/Clear.c",
    "tpm/src/command/Hierarchy/ClearControl.c",
    "tpm/src/command/Hierarchy/CreatePrimary.c",
    "tpm/src/command/Hierarchy/HierarchyChangeAuth.c",
    "tpm/src/command/Hierarchy/HierarchyControl.c",
    "tpm/src/command/Hierarchy/SetPrimaryPolicy.c",
    "tpm/src/command/Misc/PP_Commands.c",
    "tpm/src/command/Misc/SetAlgorithmSet.c",
    "tpm/src/command/NVStorage/NV_Certify.c",
    "tpm/src/command/NVStorage/NV_ChangeAuth.c",
    "tpm/src/command/NVStorage/NV_DefineSpace.c",
    "tpm/src/command/NVStorage/NV_DefineSpace2.c",
    "tpm/src/command/NVStorage/NV_Extend.c",
    "tpm/src/command/NVStorage/NV_GlobalWriteLock.c",
    "tpm/src/command/NVStorage/NV_Increment.c",
    "tpm/src/command/NVStorage/NV_Read.c",
    "tpm/src/command/NVStorage/NV_ReadLock.c",
    "tpm/src/command/NVStorage/NV_ReadPublic.c",
    "tpm/src/command/NVStorage/NV_ReadPublic2.c",
    "tpm/src/command/NVStorage/NV_SetBits.c",
    "tpm/src/command/NVStorage/NV_UndefineSpace.c",
    "tpm/src/command/NVStorage/NV_UndefineSpaceSpecial.c",
    "tpm/src/command/NVStorage/NV_Write.c",
    "tpm/src/command/NVStorage/NV_WriteLock.c",
    "tpm/src/command/NVStorage/NV_spt.c",
    "tpm/src/command/Object/ActivateCredential.c",
    "tpm/src/command/Object/Create.c",
    "tpm/src/command/Object/CreateLoaded.c",
    "tpm/src/command/Object/Load.c",
    "tpm/src/command/Object/LoadExternal.c",
    "tpm/src/command/Object/MakeCredential.c",
    "tpm/src/command/Object/ObjectChangeAuth.c",
    "tpm/src/command/Object/Object_spt.c",
    "tpm/src/command/Object/ReadPublic.c",
    "tpm/src/command/Object/Unseal.c",
    "tpm/src/command/PCR/PCR_Allocate.c",
    "tpm/src/command/PCR/PCR_Event.c",
    "tpm/src/command/PCR/PCR_Extend.c",
    "tpm/src/command/PCR/PCR_Read.c",
    "tpm/src/command/PCR/PCR_Reset.c",
    "tpm/src/command/PCR/PCR_SetAuthPolicy.c",
    "tpm/src/command/PCR/PCR_SetAuthValue.c",
    "tpm/src/command/Random/GetRandom.c",
    "tpm/src/command/Random/StirRandom.c",
    "tpm/src/command/Session/PolicyRestart.c",
    "tpm/src/command/Session/StartAuthSession.c",
    "tpm/src/command/Signature/Sign.c",
    "tpm/src/command/Signature/VerifySignature.c",
    "tpm/src/command/Startup/Shutdown.c",
    "tpm/src/command/Startup/Startup.c",
    "tpm/src/command/Symmetric/EncryptDecrypt.c",
    "tpm/src/command/Symmetric/EncryptDecrypt2.c",
    "tpm/src/command/Symmetric/EncryptDecrypt_spt.c",
    "tpm/src/command/Symmetric/HMAC.c",
    "tpm/src/command/Symmetric/Hash.c",
    "tpm/src/command/Symmetric/MAC.c",
    "tpm/src/command/Testing/GetTestResult.c",
    "tpm/src/command/Testing/IncrementalSelfTest.c",
    "tpm/src/command/Testing/SelfTest.c",
    "tpm/src/command/Vendor/Vendor_TCG_Test.c",
    "tpm/src/crypt/AlgorithmTests.c",
    "tpm/src/crypt/CryptCmac.c",
    "tpm/src/crypt/CryptEccCrypt.c",
    "tpm/src/crypt/CryptEccData.c",
    "tpm/src/crypt/CryptEccKeyExchange.c",
    "tpm/src/crypt/CryptEccMain.c",
    "tpm/src/crypt/CryptEccSignature.c",
    "tpm/src/crypt/CryptHash.c",
    "tpm/src/crypt/CryptPrime.c",
    "tpm/src/crypt/CryptPrimeSieve.c",
    "tpm/src/crypt/CryptRand.c",
    "tpm/src/crypt/CryptRsa.c",
    "tpm/src/crypt/CryptSelfTest.c",
    "tpm/src/crypt/CryptSmac.c",
    "tpm/src/crypt/CryptSym.c",
    "tpm/src/crypt/CryptUtil.c",
    "tpm/src/crypt/PrimeData.c",
    "tpm/src/crypt/RsaKeyCache.c",
    "tpm/src/crypt/Ticket.c",
    "tpm/src/crypt/ecc/TpmEcc_Signature_ECDAA.c",
    "tpm/src/crypt/ecc/TpmEcc_Signature_ECDSA.c",
    "tpm/src/crypt/ecc/TpmEcc_Signature_SM2.c",
    "tpm/src/crypt/ecc/TpmEcc_Signature_Schnorr.c",
    "tpm/src/crypt/ecc/TpmEcc_Signature_Util.c",
    "tpm/src/crypt/ecc/TpmEcc_Util.c",
    "tpm/src/crypt/math/TpmMath_Debug.c",
    "tpm/src/crypt/math/TpmMath_Util.c",
    "tpm/src/events/_TPM_Hash_Data.c",
    "tpm/src/events/_TPM_Hash_End.c",
    "tpm/src/events/_TPM_Hash_Start.c",
    "tpm/src/events/_TPM_Init.c",
    "tpm/src/main/CommandDispatcher.c",
    "tpm/src/main/ExecCommand.c",
    "tpm/src/main/SessionProcess.c",
    "tpm/src/subsystem/CommandAudit.c",
    "tpm/src/subsystem/DA.c",
    "tpm/src/subsystem/Hierarchy.c",
    "tpm/src/subsystem/NvDynamic.c",
    "tpm/src/subsystem/NvReserved.c",
    "tpm/src/subsystem/Object.c",
    "tpm/src/subsystem/PCR.c",
    "tpm/src/subsystem/PP.c",
    "tpm/src/subsystem/Session.c",
    "tpm/src/subsystem/Time.c",
    "tpm/src/support/AlgorithmCap.c",
    "tpm/src/support/Bits.c",
    "tpm/src/support/CommandCodeAttributes.c",
    "tpm/src/support/Entity.c",
    "tpm/src/support/Global.c",
    "tpm/src/support/Handle.c",
    "tpm/src/support/IoBuffers.c",
    "tpm/src/support/Locality.c",
    "tpm/src/support/Manufacture.c",
    "tpm/src/support/Marshal.c",
    "tpm/src/support/MathOnByteBuffers.c",
    "tpm/src/support/Memory.c",
    "tpm/src/support/Power.c",
    "tpm/src/support/PropertyCap.c",
    "tpm/src/support/Response.c",
    "tpm/src/support/ResponseCodeProcessing.c",
    "tpm/src/support/TableDrivenMarshal.c",
    "tpm/src/support/TableMarshalData.c",
    "tpm/src/support/TpmFail.c",
    "tpm/src/support/TpmSizeChecks.c",
  ]


  public_configs = [ ":tpm_riscv32_config" ]
  deps = [
    ":libplatform",
    "//third_party/openhitls:libhitls_bsl",
    "//third_party/openhitls:libhitls_crypto"
  ]
  part_name = "tpm"
}

# ========== tpm2-simulator 可执行文件（RISC-V 32） ==========